--- a/assets/i18n/prelogin.en.json
+++ b/assets/i18n/prelogin.en.json
@@ -45,15 +45,15 @@
   "home.payout.bank_account": "Bank account",
   "home.payout.amount": "Amount",
   "home.payout.max": "Max",
-  "home.payout.confirm_title": "Confirm PayOut",
-  "home.payout.confirm_body": "Do you really want to make a PayOut?",
+  "home.payout.confirm_title": "Confirm transfer",
+  "home.payout.confirm_body": "Do you really want to make a transfer?",
   "home.payout.error_no_account": "Main account ID is not available.",
   "home.payout.missing_account": "Please set a payout bank account in Settings.",
   "home.payout.error_bank_account": "Enter bank account number.",
   "home.payout.error_amount": "Enter a valid amount.",
   "home.payout.error_exceeds": "Amount exceeds account balance.",
-  "home.payout.error_failed": "PayOut failed.",
-  "home.payout.success": "PayOut created successfully.",
+  "home.payout.error_failed": "Transfer failed.",
+  "home.payout.success": "Transfer created successfully.",
   "home.verification.title": "Verification status",
   "home.verification.need": "Verification required",
   "home.verification.pending": "Under review",
@@ -90,19 +90,24 @@
   "home.vehicle.color": "Color",
   "home.vehicle.number": "Car number",
   "home.vehicle.year": "Year",
-  "home.vehicle.docs": "Vehicle documents",
+  "home.vehicle.docs": "Vehicle registration document",
+  "home.vehicle.docs.front": "Front side",
+  "home.vehicle.docs.back": "Back side",
   "home.vehicle.docs.add_photos": "Add from gallery",
   "home.vehicle.docs.take_photo": "Take photo",
   "home.vehicle.docs.hint": "Upload registration, insurance and other car documents",
   "home.vehicle.docs.add": "Add document",
   "home.vehicle.docs.take": "Take photo of document",
-  "home.vehicle.docs.required": "Please upload a vehicle document photo",
+  "home.vehicle.docs.required": "Please upload front and back photos of the registration document",
   "home.vehicle.photos": "Vehicle photos (4)",
   "home.vehicle.photos.add": "Add photo",
   "home.vehicle.photos.take": "Take photo",
   "home.vehicle.photos.required": "Please upload 4 vehicle photos",
   "home.vehicle.inspection": "Vehicle inspection",
+  "home.vehicle.inspection.front": "Front side",
+  "home.vehicle.inspection.back": "Back side",
   "home.vehicle.inspection.hint": "Add a vehicle inspection photo (optional)",
+  "home.vehicle.inspection.required": "Please upload front and back photos of the vehicle inspection document",
 
   "home.transactions.title": "Recent transactions",
   "home.transactions.empty": "No transactions yet",
@@ -138,10 +143,15 @@
 
   "verification.step.passport.title": "Passport or ID Card Photo",
   "verification.step.passport.hint": "The document must be original, valid, not expired.",
+  "verification.step.passport.front": "Front side",
+  "verification.step.passport.back": "Back side",
 
   "verification.step.license.title": "Driver license",
-  "verification.step.commercial.title": "Commercial driver license",
-  "verification.step.license2.title": "Driver license (2)",
+  "verification.step.license.front": "Front side",
+  "verification.step.license.back": "Back side",
+  "verification.step.commercial.title": "Business vehicle permit",
+  "verification.step.commercial.front": "Front side",
+  "verification.step.commercial.back": "Back side",
   "verification.step.license.hint": "The document must be original, valid, not expired.",
 
   "verification.step.selfie.title": "Selfie with passport",
@@ -158,6 +168,7 @@
   "verification.photo.retake": "Retake",
   "common.remove": "Remove",
   "common.required": "Required",
+  "common.apply": "Apply",
 
   "home.referral.invite_btn": "Invite via link",
   "referral.title": "Invite a friend",
@@ -177,6 +188,9 @@
   "menu.car": "My car",
   "menu.accounts": "Wallet & accounts",
   "menu.transactions": "Transactions",
+  "menu.drives": "Ride history",
+  "home.drives.empty": "No drives for the selected period",
+  "home.drives.scroll_hint": "Swipe the table left/right to see more columns",
   "menu.invite": "Invite via link",
   "menu.settings": "PayOut account",
   "settings.payout_account": "Transfer account",
