--- a/assets/i18n/prelogin.km.json
+++ b/assets/i18n/prelogin.km.json
@@ -45,15 +45,15 @@
   "home.payout.bank_account": "គណនីធនាគារ",
   "home.payout.amount": "ចំនួនទឹកប្រាក់",
   "home.payout.max": "អតិបរមា",
-  "home.payout.confirm_title": "បញ្ជាក់ការដកប្រាក់",
-  "home.payout.confirm_body": "តើអ្នកចង់ដកប្រាក់មែនទេ?",
+  "home.payout.confirm_title": "បញ្ជាក់ការផ្ទេរ",
+  "home.payout.confirm_body": "តើអ្នកពិតជាចង់ផ្ទេរមែនទេ?",
   "home.payout.error_no_account": "មិនមានលេខសម្គាល់គណនីចម្បងទេ។",
   "home.payout.missing_account": "សូមកំណត់គណនីធនាគារសម្រាប់ការផ្ទេរនៅក្នុងម៉ឺនុយការកំណត់។",
   "home.payout.error_bank_account": "សូមបញ្ចូលលេខគណនីធនាគារ។",
   "home.payout.error_amount": "សូមបញ្ចូលចំនួនទឹកប្រាក់ត្រឹមត្រូវ។",
   "home.payout.error_exceeds": "ចំនួនទឹកប្រាក់លើសសមតុល្យ។",
-  "home.payout.error_failed": "ការដកប្រាក់បរាជ័យ។",
-  "home.payout.success": "បង្កើតការដកប្រាក់ដោយជោគជ័យ។",
+  "home.payout.error_failed": "ការផ្ទេរបរាជ័យ។",
+  "home.payout.success": "បង្កើតការផ្ទេរដោយជោគជ័យ។",
   "home.verification.title": "ស្ថានភាពផ្ទៀងផ្ទាត់",
   "home.verification.need": "ត្រូវការការផ្ទៀងផ្ទាត់",
   "home.verification.pending": "ឯកសារកំពុងពិនិត្យ",
@@ -93,16 +93,21 @@
   "home.vehicle.docs.add_photos": "បន្ថែមពីវិចិត្រសាល",
   "home.vehicle.docs.take_photo": "ថតរូប",
   "home.vehicle.docs.hint": "បញ្ចូលឯកសារចុះបញ្ជី គំរោងធានារ៉ាប់រង និងឯកសារផ្សេងៗ",
-  "home.vehicle.docs": "ឯកសាររថយន្ត",
+  "home.vehicle.docs": "ឯកសារចុះបញ្ជីយានយន្ត",
+  "home.vehicle.docs.front": "ខាងមុខ",
+  "home.vehicle.docs.back": "ខាងក្រោយ",
   "home.vehicle.docs.add": "បន្ថែមឯកសារ",
   "home.vehicle.docs.take": "ថតរូបឯកសាររថយន្ត",
-  "home.vehicle.docs.required": "សូមផ្ទុករូបថតឯកសាររថយន្ត",
+  "home.vehicle.docs.required": "សូមផ្ទុករូបថតខាងមុខ និងខាងក្រោយនៃឯកសារចុះបញ្ជី",
   "home.vehicle.photos": "រូបថតយានយន្ត (4)",
   "home.vehicle.photos.add": "បន្ថែមរូបថត",
   "home.vehicle.photos.take": "ថតរូប",
   "home.vehicle.photos.required": "សូមផ្ទុករូបថតយានយន្ត 4 សន្លឹក",
   "home.vehicle.inspection": "ការពិនិត្យយានយន្ត",
+  "home.vehicle.inspection.front": "ខាងមុខ",
+  "home.vehicle.inspection.back": "ខាងក្រោយ",
   "home.vehicle.inspection.hint": "បន្ថែមរូបថតពិនិត្យយានយន្ត (ជាជម្រើស)",
+  "home.vehicle.inspection.required": "សូមផ្ទុករូបថតខាងមុខ និងខាងក្រោយនៃឯកសារពិនិត្យយានយន្ត",
 
   "home.transactions.title": "ប្រតិបត្តិការចុងក្រោយ",
   "home.transactions.empty": "មិនទាន់មានប្រតិបត្តិការទេ",
@@ -138,10 +143,15 @@
 
   "verification.step.passport.title": "រូបថតលិខិតឆ្លងដែន ឬ ប័ណ្ណអត្តសញ្ញាណ",
   "verification.step.passport.hint": "ឯកសារត្រូវតែជាដើម មានសុពលភាព និងមិនផុតកំណត់។",
+  "verification.step.passport.front": "ខាងមុខ",
+  "verification.step.passport.back": "ខាងក្រោយ",
 
   "verification.step.license.title": "បណ្ណបើកបរ",
-  "verification.step.commercial.title": "បណ្ណបើកបរពាណិជ្ជកម្ម",
-  "verification.step.license2.title": "បណ្ណបើកបរ (2)",
+  "verification.step.license.front": "ខាងមុខ",
+  "verification.step.license.back": "ខាងក្រោយ",
+  "verification.step.commercial.title": "លិខិតអនុញ្ញាតយានយន្តអាជីវកម្ម",
+  "verification.step.commercial.front": "ខាងមុខ",
+  "verification.step.commercial.back": "ខាងក្រោយ",
   "verification.step.license.hint": "ឯកសារត្រូវតែជាដើម មានសុពលភាព និងមិនផុតកំណត់។",
 
   "verification.step.selfie.title": "សែលហ្វីជាមួយលិខិតឆ្លងដែន",
@@ -158,6 +168,7 @@
   "verification.photo.retake": "ថតម្ដងទៀត",
   "common.remove": "លុប",
   "common.required": "ចាំបាច់",
+  "common.apply": "អនុវត្ត",
 
   "home.referral.invite_btn": "អញ្ជើញតាមតំណភ្ជាប់",
 
@@ -177,6 +188,9 @@
   "menu.car": "រថយន្តរបស់ខ្ញុំ",
   "menu.accounts": "កាបូប និង គណនី",
   "menu.transactions": "ប្រតិបត្តិការ",
+  "menu.drives": "ប្រវត្តិដំណើរការ",
+  "home.drives.empty": "មិនមានដំណើរការសម្រាប់កាលបរិច្ឆេទដែលបានជ្រើសរើស",
+  "home.drives.scroll_hint": "អូសឆ្វេង/ស្តាំ ដើម្បីមើលជួរឈរទាំងអស់",
   "menu.invite": "អញ្ជើញតាមតំណភ្ជាប់",
   "menu.settings": "គណនី PayOut",
   "settings.payout_account": "គណនីសម្រាប់ផ្ទេរ",
