--- a/assets/i18n/prelogin.ru.json
+++ b/assets/i18n/prelogin.ru.json
@@ -45,15 +45,15 @@
   "home.payout.bank_account": "Банковский аккаунт",
   "home.payout.amount": "Сумма",
   "home.payout.max": "Макс",
-  "home.payout.confirm_title": "Подтвердите вывод",
-  "home.payout.confirm_body": "Вы действительно хотите выполнить вывод средств?",
+  "home.payout.confirm_title": "Подтвердите перевод",
+  "home.payout.confirm_body": "Вы действительно хотите выполнить перевод?",
   "home.payout.error_no_account": "ID основного аккаунта недоступен.",
   "home.payout.missing_account": "Необходимо задать банковский аккаунт для вывода средств через меню настроек.",
   "home.payout.error_bank_account": "Введите номер банковского аккаунта.",
   "home.payout.error_amount": "Введите корректную сумму.",
   "home.payout.error_exceeds": "Сумма превышает баланс.",
-  "home.payout.error_failed": "Не удалось выполнить вывод.",
-  "home.payout.success": "Вывод создан успешно.",
+  "home.payout.error_failed": "Не удалось выполнить перевод.",
+  "home.payout.success": "Перевод создан успешно.",
   "home.verification.title": "Статус верификации",
   "home.verification.need": "Требуется верификация",
   "home.verification.pending": "Документы проверяются",
@@ -89,19 +89,24 @@
   "home.vehicle.color": "Цвет",
   "home.vehicle.number": "Госномер",
   "home.vehicle.year": "Год",
-  "home.vehicle.docs": "Документы на машину",
+  "home.vehicle.docs": "Документ о регистрации ТС",
+  "home.vehicle.docs.front": "Лицевая сторона",
+  "home.vehicle.docs.back": "Обратная сторона",
   "home.vehicle.docs.add_photos": "Добавить из галереи",
   "home.vehicle.docs.take_photo": "Сделать фото",
   "home.vehicle.docs.hint": "Загрузите СТС/ПТС, страховку и другие документы",
   "home.vehicle.docs.add": "Добавить документ",
   "home.vehicle.docs.take": "Сделать фото документа",
-  "home.vehicle.docs.required": "Пожалуйста, приложите фото хотя бы одного документа",
+  "home.vehicle.docs.required": "Пожалуйста, приложите фото лицевой и обратной стороны документа о регистрации",
   "home.vehicle.photos": "Фото автомобиля (4)",
   "home.vehicle.photos.add": "Добавить фото",
   "home.vehicle.photos.take": "Сделать фото",
   "home.vehicle.photos.required": "Пожалуйста, загрузите 4 фото автомобиля",
   "home.vehicle.inspection": "Осмотр автомобиля",
+  "home.vehicle.inspection.front": "Лицевая сторона",
+  "home.vehicle.inspection.back": "Обратная сторона",
   "home.vehicle.inspection.hint": "Добавьте фото осмотра автомобиля (необязательно)",
+  "home.vehicle.inspection.required": "Пожалуйста, приложите фото лицевой и обратной стороны документа осмотра",
 
   "home.transactions.title": "Последние транзакции",
   "home.transactions.empty": "Пока нет транзакций",
@@ -137,10 +142,15 @@
 
   "verification.step.passport.title": "Фото паспорта или ID-карты",
   "verification.step.passport.hint": "Документ должен быть оригиналом, действительным и не просроченным.",
+  "verification.step.passport.front": "Лицевая сторона",
+  "verification.step.passport.back": "Обратная сторона",
 
   "verification.step.license.title": "Водительское удостоверение",
-  "verification.step.commercial.title": "Коммерческое водительское удостоверение",
-  "verification.step.license2.title": "Водительское удостоверение (2)",
+  "verification.step.license.front": "Лицевая сторона",
+  "verification.step.license.back": "Обратная сторона",
+  "verification.step.commercial.title": "Разрешение на коммерческий транспорт",
+  "verification.step.commercial.front": "Лицевая сторона",
+  "verification.step.commercial.back": "Обратная сторона",
   "verification.step.license.hint": "Документ должен быть оригиналом, действительным и не просроченным.",
 
   "verification.step.selfie.title": "Селфи с паспортом",
@@ -157,6 +167,7 @@
   "verification.photo.retake": "Переснять",
   "common.remove": "Удалить",
   "common.required": "Обязательное поле",
+  "common.apply": "Применить",
 
   "home.referral.invite_btn": "Пригласить по ссылке",
   "referral.title": "Пригласить друга",
@@ -176,6 +187,9 @@
   "menu.car": "Мой автомобиль",
   "menu.accounts": "Кошелёк и счета",
   "menu.transactions": "Транзакции",
+  "menu.drives": "История поездок",
+  "home.drives.empty": "Нет поездок за выбранный период",
+  "home.drives.scroll_hint": "Проведите влево/вправо, чтобы увидеть все столбцы",
   "menu.invite": "Пригласить по ссылке",
   "menu.settings": "PayOut аккаунт",
   "settings.payout_account": "Счет для перевода",
